syntax = "proto3";
import "google/protobuf/wrappers.proto";
import "google/protobuf/empty.proto";

option java_multiple_files = true;
option java_package = "baby.mumu.mail.client.api.grpc";
option java_outer_classname = "TemplateMailServiceProto";

service TemplateMailService {
  rpc sendMail (TemplateMailSendGrpcCmd) returns (google.protobuf.Empty);
}

message TemplateMailSendGrpcCmd {
  string address = 1;
  string name = 2;
  string from = 3;
  string to = 4;
  string subject = 5;
  string data = 6;
}
