syntax = "proto3";
import "google/protobuf/wrappers.proto";
import "google/protobuf/empty.proto";

option java_multiple_files = true;
option java_package = "baby.mumu.storage.client.api.grpc";
option java_outer_classname = "StreamFileServiceProto";

service StreamFileService {
  rpc download (StreamFileDownloadGrpcCmd) returns (StreamFileDownloadGrpcResult);
  rpc removeFile (StreamFileRemoveGrpcCmd) returns (google.protobuf.Empty);
}

message StreamFileDownloadGrpcCmd {
  string storageAddress = 1;
  string name = 2;
  string rename = 3;
}

message StreamFileDownloadGrpcResult {
  google.protobuf.BytesValue fileContent = 1;
}

message StreamFileRemoveGrpcCmd {
  string storageAddress = 1;
  string name = 2;
}

